non-working commit.

--- a/SimonWaite.IrcBot/SimonWaite.Network.Protocols.Irc/SimonWaite.Network.Protocols.Irc.csproj
+++ b/SimonWaite.IrcBot/SimonWaite.Network.Protocols.Irc/SimonWaite.Network.Protocols.Irc.csproj
@@ -9,25 +9,24 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SimonWaite.Network.Protocols.Irc</RootNamespace>
     <AssemblyName>SimonWaite.Network.Protocols.Irc</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>True</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -43,6 +42,14 @@
     <Compile Include="Log.cs" />
     <Compile Include="BufferedInputPump.cs" />
     <Compile Include="AutoJoinChannelsAgent.cs" />
+    <Compile Include="Channel.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="Mode.cs" />
+    <Compile Include="ChannelMonitorAgent.cs" />
+    <Compile Include="ReadOnlyDictionary.cs" />
+    <Compile Include="ReadOnlyList.cs" />
+    <Compile Include="BasicModes.cs" />
+    <Compile Include="PriorityQueue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
