working, but modes aren't getting parsed properly. Also the mode detection is wrong.

--- a/SimonWaite.IrcBot/SimonWaite.Network.Protocols.Irc/SimonWaite.Network.Protocols.Irc.csproj
+++ b/SimonWaite.IrcBot/SimonWaite.Network.Protocols.Irc/SimonWaite.Network.Protocols.Irc.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ReadOnlyList.cs" />
     <Compile Include="BasicModes.cs" />
     <Compile Include="PriorityQueue.cs" />
+    <Compile Include="UserChannelModes.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
